app/static/receptionist_style.css
@import "base_style.css";

/* -------------------------------------------- SIDEBAR USER -------------------------------------------- */
.sidenav-user-bg {
    font-size: 12px;
    display: flex;
    align-items: center;
    height: 65px; 
    background-color: white;
    border-radius: 350px; 
    margin-top: 138px;
    margin-bottom: 25px;
    overflow: hidden;
    justify-content: left;
}

/* SIDEBAR */
.sidenav-bg {
    width: 80px;
    height: 100%; /* Set the height to 100% to make it full height */
    background-color: var(--blueC);
    border-radius: 50px;
    position: fixed;
    top: 0; /* Stick it to the top of the viewport */
    left: 0; /* Stick it to the left of the viewport */
    padding: 8px;
    z-index: 1;
}

/* -------------------------------------------- DASHBOARD -------------------------------------------- */
.add-icon img {
    width: 345px;
    top: 150px;
    left: 260px;
    border-radius: 20px;
} 

.reschedule-icon img {
    width: 345px;
    top: 150px;
    left: 635px;
    border-radius: 20px;
}

.cancel-icon img {
    width: 345px;
    top: 150px;
    left: 1010px;
    border-radius: 20px;
}

.add-icon img, .reschedule-icon img, .cancel-icon img {
    position: fixed;
}

.add-icon img:hover, .reschedule-icon img:hover, .cancel-icon img:hover {
    transform: scale(101%);
    z-index: 1;
}

.add-icon img:active, .reschedule-icon img:active, .cancel-icon img:active {
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
    transform: translateY(1px);
}

/* APPOINTMENT */
* {
    margin: 0;
    padding: 0;

    box-sizing: border-box;
    font-family:  'Montserrat';
}
.appointment_body {
    min-height: 100vh;
    background-color:rgb(255, 255, 255);
    display: flex;
    justify-content:center;
    align-items: center;

}
.table__header__appointment{
    width: 100%;
    height: 10%;
    background-color: #fff4;
    padding: .8rem 1rem;
    border-radius: .6rem;
    text-align: center;
    font-family: 'Inter';
    font-weight: bolder;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.table__header__appointment .doccare-input-group{
    width: 20%;
    height: 100%;
    padding: 0 0.8rem;
    border-radius: 2rem;
    background-color: rgba(223, 222, 222, 0.333);

    display: flex;
    justify-content: center;
    align-items: center;
    transition: 0.5s
}

.table__header__appointment .doccare-input-group input{
    width: 100%;
    padding: 0 0.5rem 0 0.3rem;
    background-color: transparent;
    border: none;
    outline: none;
    
}

.table__header__appointment .doccare-input-group:hover{
    width: 35%;
    background-color: rgba(227, 225, 225, 0.333);
    box-shadow: 0 0.1rem 0.3rem rgba(77, 77, 77, 0.133);
    
}

.appointment_entries{
    width: 100%;
    height: 5%;
    background-color: #fff4;
    text-align: center;
    font-family: 'Inter';
    font-weight: bolder;
    display: flex;
    justify-content: left;
    align-items: center;
    margin-left: 1.25%;
}

.doccare-table-appointment-content{
    width: 95%;
    max-height: calc(90% - 1.6rem);
    background-color: #fffb;
    
    margin: .8rem auto;
    border-radius: .6rem;
    overflow: auto;
    overflow-y: overlay; /* Keep vertical scrollbar */
    overflow-x: overlay; /* Hide horizontal scrollbar */
    transition: max-height 0.5s ease-in-out;

}
.doccare-table-appointment-content::-webkit-scrollbar{
    width: 0.5rem;
    height: 0.5rem;
}
.doccare-table-appointment-content::-webkit-scrollbar-thumb{
    border-radius: 0.5rem;
    background-color: #0004;
    visibility: hidden;
}

.doccare-table-appointment-content:hover::-webkit-scrollbar-thumb{
    visibility: visible;
}

table, th, td {
    padding: 1rem;
    border-collapse: collapse;
    text-align: left;
}

table {
    width:100%;
}

thead th {
    position: sticky;
    top: 0;
    left: 0;
    background-color: aliceblue;
    cursor: pointer;
}

thead th span.icon-arrow{
    display: inline-block;
    width: 1.3rem;
    height: 1.3rem;
    border-radius: 50%;
    border: 1.4px solid aliceblue; 
    text-align: center;
    font-size: 1rem;
    
    margin-left: .5rem;
    transition: .2s ease-in-out;
}

thead th:hover span.icon-arrow {
    border: 1.4px solid #0277BD;
}

thead th.active span.icon-arrow {
    background-color: #0277BD;
    color: white;
}

thead th.asc span.icon-arrow {
    transform: rotate(180deg);
}

thead th.active, tbody td.active {
    color: #0277BD;
}

.material-symbols-outlined {
    color: #0277BD;
    font-variation-settings:
    'FILL' 10,
    'wght' 400,
    'GRAD' 0,
    'opsz' 24
}

/* Center the icon horizontally */
.doccare-add-appointment-icon {
    text-align: center;
    position: fixed;
    right: 20px; /* Adjust the distance from the right side of the screen */
    bottom: 20px; /* Adjust the distance from the bottom of the screen */
}

/* Style the icon */
.material-symbols-outlined.add-icon {
    font-size: 72px; /* Initial size */
    transition: transform 0.2s; /* Add a smooth transition effect for the hover animation */
}

/* Enlarge the icon on hover */
.material-symbols-outlined.add-icon:hover {
    font-size: 96px; /* Larger size on hover */
    transform: rotate(90deg); 
    cursor: pointer;
}

.material-symbols-outlined.delete-icon {
    font-size: 24px; 
    transition: transform 0.2s; /* Add a smooth transition effect for the hover animation */
    cursor: pointer;
}

/* Enlarge the icon on hover */
.material-symbols-outlined.delete-icon:hover {
    transform: scale(1.2);
}

.delete-appoinment-button {
    background-color: transparent;
    border: 1px solid rgb(16, 121, 137);
    border-radius: 20%;
    outline: none;
    padding: 0.1rem 0.2rem; /* Add padding to create spacing around the icon */
    margin-left: 0.2rem;
    transition: transform 0.2s; /* Add a smooth transition effect for the hover animation */
}

.delete-appoinment-button:hover {
    border: 1px solid rgb(16, 121, 137);
    transform: scale(1.2);
}

.doccare-view-appoinment-icon{
    background-color: transparent;
    border: 1px solid rgb(16, 121, 137);
    border-radius: 20%;
    outline: none;
    padding: 0.1rem 0.2rem; /* Add padding to create spacing around the icon */
    margin-left: 0.2rem;
    transition: transform 0.2s; /* Add a smooth transition effect for the hover animation */
}

.doccare-view-appoinment-icon:hover{
    border: 1px solid rgb(16, 121, 137);
    transform: scale(1.2);
}

.doccare-edit-appoinment-icon{
    background-color: transparent;
    border: 1px solid rgb(16, 121, 137);
    border-radius: 20%;
    outline: none;
    padding: 0.1rem 0.2rem; /* Add padding to create spacing around the icon */
    margin-left: 0.2rem;
    transition: transform 0.2s; /* Add a smooth transition effect for the hover animation */
}

.doccare-edit-appoinment-icon:hover{
    border: 1px solid rgb(16, 121, 137);
    transform: scale(1.2);
}


.table__cell {
    display: flex;
    justify-content: left;
    align-items: center;
}

.table__cell .material-symbols-outlined {
    display: inline-block;
    vertical-align: middle; 
}


.table__cell .material-symbols-outlined + .material-symbols-outlined {
    margin-left: 0.2rem; 
    margin: 0.2 rem; 
}

  
main.doccare-appointment-table {
    width: 82vw;
    height: 90vh;
    background-color: #fff5 !important;
    backdrop-filter: blur(10px);
    box-shadow: 0 .4rem .8rem #0005;
    border-radius: 0.8rem;
    overflow: hidden;
    margin-left: 2%;
}

tbody tr:nth-child(even) {
    background-color: #ecf6ff !important;
}

tbody tr{
    --delay: .1s;
    transition: .5s ease-in-out var(--delay), background-color 0s;
}

tbody tr:hover {
    background-color:rgb(240, 254, 255) !important;
}

tbody tr td, 
tbody tr td p, 
tbody tr td button {
    transition: .2s ease-in-out .5s;
}

tbody tr.hide td,
tbody tr.hide td p, 
tbody tr.hide td button {
    padding: 0;
    font: 0 / 0 'Montserrat';
    transition: .2s ease-in-out .5s;
}

tbody tr.hide {
    opacity: 0;
    transform: translateX(100%);
}

.status {
    padding: 0.4rem 0;
    border-radius: 2rem;
}

.status.done {
    background-color: #86E49D;
    color: #006b21;
    text-align: center;
}

.status.pending {
    background-color: #fbedd0;
    color: #ebc474;
    text-align: center;
}

.status.cancelled {
    background-color: #d893a3;
    color: #b30021;
}

.status.scheduled {
    background-color: #DFF1FF;
    color: #0277BD;
}


.pagination {
    display: flex;
    justify-content: center;
    position: fixed; 
    bottom: 0; 
    left: 0;
    right: 0; 
    padding: 10px 0; /* Add padding for better spacing */
    z-index: 999; /* Ensure it appears above other content */
    /*box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.1); Optional shadow for separation */
}

.pagination a, .pagination span {
    padding: 5px 10px;
    border: 1px solid #ccc;
    margin: 0 5px;
    text-decoration: none;
    color: #333;
    background-color: #fff;
    border-radius: 15%;
    outline: none;
    transition: transform 0.2s;
}

.pagination a:hover {
    background-color: #ddd;
    transform: scale(1.2);
}

.pagination .current {
    background-color: #007bff;
    color: #fff;
    border-radius: 15%;
    outline: none;
}


@media (max-width: 768px) {
    td:not(:first-of-type){
        min-width: 12.1rem;
    }
}


/* -------------------------------------------- CALENDAR -------------------------------------------- */
/* style here */



/* -------------------------------------------- PROFILE -------------------------------------------- */
/* style here */

